fix: Java 17 에 없는 API 를 로컬에서도 잡도록 --release 고정
Math.clamp 은 Java 21 에 생겼다. 로컬 JDK 는 22 라 통과했고, CI·운영은 17 이라
"cannot find symbol: method clamp(int,int,int)" 로 빌드가 멈췄다.

sourceCompatibility 는 문법만 17 로 맞출 뿐 표준 라이브러리는 로컬 JDK 것을 그대로 쓴다.
--release 17 은 17 에 없는 API 자체를 컴파일 시점에 막으므로 같은 실수가 CI 까지 가지 않는다.

호출부는 Math.max/min 으로 바꿨다. 테스트 469건 통과.